# grapinator

./: .env  .gitignore  CHANGELOG.md  README.md  pylintrc  setup.cfg
.github/prompts/: security-audit-plan.prompt.md
docker/: Dockerfile.alpine  keycloak.yaml
docker/resources/: grapinator_service.sh  keycloak-realm.json
docs/: demo_queries.md  graphiql_user_guide.md  grapinator_ini.md  gunicorn.md  new-design.md  nginx.md  oidc.md  schema_docs.md
gql-tester/: .gitignore  CHANGELOG.md  README.md  setup.cfg
gql-tester/config/: sample_endpoints.json  sample_queries.md
gql-tester/gql_tester/: comparison.py  integration.py
grapinator/: __init__.py  app.py  auth.py  db_listener.py  middleware.py  model.py  schema.py  settings.py  svc_cherrypy.py  svc_gunicorn.py
grapinator/resources/: grapinator.ini  grapinator_rbac.ini  grapinator_rbac_keycloakdev.ini  gunicorn.conf.py  schema.dct  schema_rbac.dct
milestone/: grapinator_dynamic_mutations.md  grapinator_jwt_design.md
milestones/: grapinator_rbac_design.md
tests/: README.md  comparison_results.json  integration_test_queries.md  integration_test_queries.md.northwind  requirements-test.txt  run_graphql_tests.sh  run_tests.sh  single_test_results.json  test_bearer_auth.py  test_config.yaml  test_connection_field.py  test_db_listener.py  test_endpoint_comparison.py  test_flask_app.py  test_gql_class_creation.py  test_grapinator_config.py  test_gunicorn_config.py  test_integration_queries.py  test_logging.py  test_no_cherrypy_imports.py  test_orm_class_creation.py  test_rbac.sh  test_schema_settings.py  test_security.py  test_settings_class.py  test_svc_gunicorn.py
tools/: dev_jwt.py  test_rbac_northwind.sh
