[metadata]
name = grapinator
version = 1.2
author = NREL
description = Dynamic GraphQL API Creator
long_description = file: README.md

[options]
packages = find:
install_requires =
    oracledb>=3.4.2
    pymysql>=1.1.2
    CryptoConfig @ git+https://github.com/NatLabRockies/CryptoConfig.git@v1.0.1
    graphene>=3.4.3
    # graphene-sqlalchemy 3.0.0rc2 is the first graphene 3.x compatible release.
    # No stable 3.x release exists on PyPI yet; pin to the latest RC.
    graphene-sqlalchemy==3.0.0rc2
    # Flask-GraphQL only supported graphql-core 2.x (graphene 2.x) and is abandoned.
    # graphql-server[flask] is the maintained graphql-core 3.x / graphene 3.x replacement.
    # Import path changes: from graphql_server.flask import GraphQLView
    graphql-server[flask]>=3.0.0
    # SQLAlchemy 2.0 has breaking changes from 1.x; see migration notes below:
    #   - declarative_base() moved: use sqlalchemy.orm.declarative_base()
    #     instead of sqlalchemy.ext.declarative.declarative_base()
    #   - create_engine() no longer accepts convert_unicode=True (remove it)
    #   - Query API changes: use Session.execute(select(...)) pattern where needed
    SQLAlchemy>=2.0.48,<2.1
    Flask>=3.1.3
    cherrypy>=18.10.0
    Flask-Cors>=6.0.2
    wsgi-request-logger>=0.4.6
python_requires = >=3.9

[options.extras_require]
dev =
    pylint>=4.0.5

scripts =
